--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.4.0"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
